--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
-  - title: "Home"
+  - title: "cv"
     url: /
-  - title: "Blog"
+  - title: "blog"
     url: /blog/
 #  - title: "Theme documentation"
 #    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
