--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "DrSmithFr"
   avatar           : "/assets/images/avatar.jpeg"
-  bio              : "It always seems impossible until it's done."
+  bio              : "Festina Lente"
   location         : "Mallorca (ES)"
   email            :
   links:
